findGreaterThan 메서드 검증로직 추가 및 출력메세지 추가